Write annotation files

--- a/DataManipulation/Pre-process Images.ipynb
+++ b/DataManipulation/Pre-process Images.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "quarterly-traffic",
+   "id": "tested-fleece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "psychological-magnet",
+   "id": "herbal-interim",
    "metadata": {},
    "source": [
     "# -----------------------------------\n",
@@ -28,39 +28,65 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "thorough-canada",
+   "id": "productive-nancy",
    "metadata": {},
    "outputs": [],
    "source": [
-    "images_dir = '../data/FullIJCNN2013/'\n",
-    "images_info_dir = '../data/FullIJCNN2013/data_info.csv'\n",
-    "images_info_df = pd.read_csv(images_info_dir)\n",
-    "final_df = pd.DataFrame(columns=images_info_df.columns)"
+    "data_dir = '../data/TrainIJCNN2013/'\n",
+    "data_info_dir = '../data/TrainIJCNN2013/data_info.csv'\n",
+    "data_info_df = pd.read_csv(data_info_dir)\n",
+    "final_df = pd.DataFrame(columns=data_info_df.columns)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "least-rabbit",
+   "id": "partial-intermediate",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-3-16cd3cf7d9f3>:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_info_df['path'][i] = data_info_df['path'][i][:-4]\n"
+     ]
+    }
+   ],
    "source": [
-    "for current_dir , dirs ,files in os.walk(images_dir):\n",
-    "    for f in files:\n",
-    "        if f.endswith('.ppm'):\n",
-    "            image_name = f[:-4]\n",
-    "            image = cv.imread(images_dir + f)\n",
-    "            single_data_line = images_info_df.loc[images_info_df['path'] == f].copy()\n",
-    "            final_df = final_df.append(single_data_line)\n",
-    "            save_path = \"../data/FullIJCNN2013/\" + image_name + '.jpg'\n",
-    "            if not os.path.isfile(save_path):\n",
-    "                cv.imwrite(save_path,image)"
+    "for i in range(len(data_info_df)):\n",
+    "    data_info_df['path'][i] = data_info_df['path'][i][:-4]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "informal-rings",
+   "id": "specific-leisure",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for current_dir , dirs ,files in os.walk(data_dir):\n",
+    "    for f in files:\n",
+    "        if f.endswith('.ppm'):\n",
+    "            image_name = f[:-4]\n",
+    "            image = cv.imread(data_dir + f)\n",
+    "            single_data_line = data_info_df.loc[data_info_df['path'] == f[:-4]].copy()\n",
+    "            if single_data_line.isnull().values.all():\n",
+    "                os.remove(data_dir + f)\n",
+    "            else:\n",
+    "                final_df = final_df.append(single_data_line)\n",
+    "                save_path = \"../data/Images/\" + image_name + '.jpg'\n",
+    "                if not os.path.isfile(save_path):\n",
+    "                    cv.imwrite(save_path,image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "healthy-consultancy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,182 +96,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "healthy-anaheim",
+   "execution_count": 6,
+   "id": "eight-ghost",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>path</th>\n",
-       "      <th>left</th>\n",
-       "      <th>top</th>\n",
-       "      <th>right</th>\n",
-       "      <th>bottom</th>\n",
-       "      <th>id</th>\n",
-       "      <th>object_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>00000.ppm</td>\n",
-       "      <td>774</td>\n",
-       "      <td>411</td>\n",
-       "      <td>815</td>\n",
-       "      <td>446</td>\n",
-       "      <td>1</td>\n",
-       "      <td>danger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>00001.ppm</td>\n",
-       "      <td>983</td>\n",
-       "      <td>388</td>\n",
-       "      <td>1024</td>\n",
-       "      <td>432</td>\n",
-       "      <td>2</td>\n",
-       "      <td>mandatory</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>00001.ppm</td>\n",
-       "      <td>386</td>\n",
-       "      <td>494</td>\n",
-       "      <td>442</td>\n",
-       "      <td>552</td>\n",
-       "      <td>2</td>\n",
-       "      <td>mandatory</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>00001.ppm</td>\n",
-       "      <td>973</td>\n",
-       "      <td>335</td>\n",
-       "      <td>1031</td>\n",
-       "      <td>390</td>\n",
-       "      <td>3</td>\n",
-       "      <td>other</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>00002.ppm</td>\n",
-       "      <td>892</td>\n",
-       "      <td>476</td>\n",
-       "      <td>1006</td>\n",
-       "      <td>592</td>\n",
-       "      <td>2</td>\n",
-       "      <td>mandatory</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>00003.ppm</td>\n",
-       "      <td>742</td>\n",
-       "      <td>443</td>\n",
-       "      <td>765</td>\n",
-       "      <td>466</td>\n",
-       "      <td>0</td>\n",
-       "      <td>prohibitory</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>00003.ppm</td>\n",
-       "      <td>742</td>\n",
-       "      <td>466</td>\n",
-       "      <td>764</td>\n",
-       "      <td>489</td>\n",
-       "      <td>0</td>\n",
-       "      <td>prohibitory</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>00003.ppm</td>\n",
-       "      <td>737</td>\n",
-       "      <td>412</td>\n",
-       "      <td>769</td>\n",
-       "      <td>443</td>\n",
-       "      <td>1</td>\n",
-       "      <td>danger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>00004.ppm</td>\n",
-       "      <td>898</td>\n",
-       "      <td>342</td>\n",
-       "      <td>967</td>\n",
-       "      <td>409</td>\n",
-       "      <td>1</td>\n",
-       "      <td>danger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>00004.ppm</td>\n",
-       "      <td>906</td>\n",
-       "      <td>407</td>\n",
-       "      <td>955</td>\n",
-       "      <td>459</td>\n",
-       "      <td>0</td>\n",
-       "      <td>prohibitory</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Unnamed: 0       path left  top right bottom id  object_name\n",
-       "0          0  00000.ppm  774  411   815    446  1       danger\n",
-       "1          1  00001.ppm  983  388  1024    432  2    mandatory\n",
-       "2          2  00001.ppm  386  494   442    552  2    mandatory\n",
-       "3          3  00001.ppm  973  335  1031    390  3        other\n",
-       "4          4  00002.ppm  892  476  1006    592  2    mandatory\n",
-       "5          5  00003.ppm  742  443   765    466  0  prohibitory\n",
-       "6          6  00003.ppm  742  466   764    489  0  prohibitory\n",
-       "7          7  00003.ppm  737  412   769    443  1       danger\n",
-       "8          8  00004.ppm  898  342   967    409  1       danger\n",
-       "9          9  00004.ppm  906  407   955    459  0  prohibitory"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing ../data/obj.names\n"
+     ]
     }
    ],
    "source": [
-    "final_df.head(10)"
+    "%%writefile ../data/obj.names\n",
+    "prohibitory\n",
+    "danger\n",
+    "mandatory\n",
+    "other"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "timely-economy",
+   "id": "federal-clearance",
    "metadata": {},
    "source": [
     "# -----------------------------------\n",
@@ -254,16 +127,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "demonstrated-pharmacy",
+   "execution_count": 7,
+   "id": "optimum-thirty",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ANNOTATIONS_DIR_PREFIX = \"../data/Images\"\n",
+    "DESTINATION_DIR = \"../data/XML\"\n",
+    "CLASS_MAPPING = {\n",
+    "    '0' : 'prohibitory',\n",
+    "    '1' : 'danger' ,\n",
+    "    '2' : 'mandatory' ,\n",
+    "    '3' : 'other' ,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "honey-newspaper",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_root(filename, width, height):\n",
+    "    root = ET.Element(\"annotation\")\n",
+    "    ET.SubElement(root, \"folder\").text = \"Images\"\n",
+    "    ET.SubElement(root, \"filename\").text = (filename)\n",
+    "    ET.SubElement(root, \"path\").text = \"../data/Images/{}\".format(filename)\n",
+    "    source = ET.SubElement(root, \"source\")\n",
+    "    ET.SubElement(source, \"database\").text = \"Unknown\"\n",
+    "    size = ET.SubElement(root, \"size\")\n",
+    "    ET.SubElement(size, \"width\").text = str(width)\n",
+    "    ET.SubElement(size, \"height\").text = str(height)\n",
+    "    ET.SubElement(size, \"depth\").text = \"3\"\n",
+    "    ET.SubElement(root, \"segmented\").text = \"0\"\n",
+    "    return root\n",
+    "# ---------------------------------------------------\n",
+    "def create_object_annotation(root, voc):\n",
+    "    for ind,voc_label in voc.iterrows():\n",
+    "        obj = ET.SubElement(root, \"object\")\n",
+    "        ET.SubElement(obj, \"name\").text=str(CLASS_MAPPING.get(str(voc_label[\"id\"])))\n",
+    "        ET.SubElement(obj, \"pose\").text = \"Unspecified\"\n",
+    "        ET.SubElement(obj, \"truncated\").text = str(0)\n",
+    "        ET.SubElement(obj, \"difficult\").text = str(0)\n",
+    "        bbox = ET.SubElement(obj, \"bndbox\")\n",
+    "        ET.SubElement(bbox, \"xmin\").text = str(voc_label[\"left\"])\n",
+    "        ET.SubElement(bbox, \"ymin\").text = str(voc_label[\"top\"])\n",
+    "        ET.SubElement(bbox, \"xmax\").text = str(voc_label[\"right\"])\n",
+    "        ET.SubElement(bbox, \"ymax\").text = str(voc_label[\"bottom\"])\n",
+    "    if(len(voc)==0):\n",
+    "        print(voc)\n",
+    "        print('no')\n",
+    "    return root\n",
+    "# ---------------------------------------------------\n",
+    "def create_file(filename, width, height, voc):\n",
+    "    root = create_root(filename, width, height)\n",
+    "    root = create_object_annotation(root, voc)\n",
+    "    tree = ET.ElementTree(root)\n",
+    "    tree.write(\"{}/{}.xml\".format(DESTINATION_DIR, filename[:-4]))\n",
+    "# ---------------------------------------------------\n",
+    "def read_file(filename):\n",
+    "    img = cv.imread(\"{}/{}\".format(\"../data/Images/\", filename))\n",
+    "    w,h=img.shape[:2]\n",
+    "    voc = final_df.loc[final_df.path == filename[:-4]].copy()\n",
+    "    voc[\"name\"] = CLASS_MAPPING.get(str((voc[\"id\"])))\n",
+    "    create_file(filename, w, h, voc)\n",
+    "# ---------------------------------------------------\n",
+    "def start():\n",
+    "    if not os.path.exists(DESTINATION_DIR):\n",
+    "        os.makedirs(DESTINATION_DIR)\n",
+    "    for filename in os.listdir(ANNOTATIONS_DIR_PREFIX):\n",
+    "          if filename.endswith(\".jpg\"):\n",
+    "            read_file(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "supreme-heather",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "objective-convert",
+   "id": "blank-aurora",
    "metadata": {},
    "outputs": [],
    "source": []
