Another change in Analyse Imahes

--- a/DataManipulation/Analyse Images.ipynb
+++ b/DataManipulation/Analyse Images.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "genuine-aging",
+   "id": "alternate-korea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,13 @@
     "import matplotlib.pyplot as plt\n",
     "from PIL import Image\n",
     "import pandas as pd\n",
-    "import seaborn as sb"
+    "import seaborn as sb\n",
+    "import cv2 as cv"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "durable-vatican",
+   "id": "sixth-rebound",
    "metadata": {},
    "source": [
     "# -------------------------------------------\n",
@@ -29,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "quality-unknown",
+   "id": "adjustable-documentation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "micro-stretch",
+   "id": "missing-handbook",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dietary-noise",
+   "id": "coupled-rehabilitation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "presidential-humanity",
+   "id": "exclusive-cheese",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wrong-stationery",
+   "id": "medieval-writing",
    "metadata": {},
    "source": [
     "# --------------------------------------\n",
@@ -182,13 +183,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "expired-laptop",
+   "id": "mediterranean-convert",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f130a35f250>"
+       "<matplotlib.image.AxesImage at 0x7ff13da4c640>"
       ]
      },
      "execution_count": 6,
@@ -215,8 +216,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "about-brake",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images_shape = {}\n",
+    "for i in range(len(data)):\n",
+    "    img_shape = cv.imread(os.path.join('../data/TrainIJCNN2013/',data[i]['path'])).shape\n",
+    "    if img_shape not in images_shape.keys():\n",
+    "        images_shape[img_shape] = 1\n",
+    "    else:\n",
+    "        images_shape[img_shape] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "humanitarian-timber",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(800, 1360, 3): 852}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(images_shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "innocent-personality",
+   "id": "pressed-bench",
    "metadata": {},
    "source": [
     "**All images are of size 800*1360 with 3 channels.**"
@@ -224,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "monetary-adoption",
+   "id": "portuguese-wells",
    "metadata": {},
    "source": [
     "# -----------------------------------------------\n",
@@ -233,8 +268,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "invisible-condition",
+   "execution_count": 9,
+   "id": "chinese-jenny",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +278,7 @@
        "<AxesSubplot:xlabel='id', ylabel='count'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -267,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numeric-aaron",
+   "id": "considerable-guinea",
    "metadata": {},
    "source": [
     "# ------------------------------\n",
@@ -276,8 +311,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "developing-being",
+   "execution_count": 10,
+   "id": "saving-hydrogen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,8 +324,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "closed-coffee",
+   "execution_count": 11,
+   "id": "massive-writing",
    "metadata": {},
    "outputs": [
     {
@@ -326,8 +361,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "critical-workstation",
+   "execution_count": 12,
+   "id": "proper-treasure",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +459,7 @@
        "4  00002.ppm   892  476   1006     592   2   mandatory"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,8 +470,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "appointed-nursing",
+   "execution_count": 13,
+   "id": "brown-capitol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "olive-spokesman",
+   "id": "respiratory-bulgaria",
    "metadata": {},
    "outputs": [],
    "source": []
