Changing some functions

--- a/DataManipulation/Pre-process Images.ipynb
+++ b/DataManipulation/Pre-process Images.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "tested-fleece",
+   "id": "fiscal-future",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,20 @@
     "import os\n",
     "import cv2 as cv\n",
     "import tensorflow as tf\n",
-    "from tensorflow.train import Example , Int64List , BytesList , FeatureList , Features \n",
+    "from tensorflow.train import Example , Int64List , BytesList , Features , FloatList , Feature \n",
     "import xml.etree.cElementTree as ET\n",
-    "from PIL import Image"
+    "from PIL import Image\n",
+    "from tqdm import tqdm\n",
+    "import lxml.etree\n",
+    "import time\n",
+    "from absl import logging , app , flags\n",
+    "from contextlib import ExitStack\n",
+    "import hashlib"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "herbal-interim",
+   "id": "living-discrimination",
    "metadata": {},
    "source": [
     "# -----------------------------------\n",
@@ -28,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "productive-nancy",
+   "id": "skilled-panama",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "partial-intermediate",
+   "id": "restricted-benchmark",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "specific-leisure",
+   "id": "special-foundation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "healthy-consultancy",
+   "id": "answering-willow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,30 +101,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "eight-ghost",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing ../data/obj.names\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile ../data/obj.names\n",
-    "prohibitory\n",
-    "danger\n",
-    "mandatory\n",
-    "other"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "federal-clearance",
+   "id": "formed-venezuela",
    "metadata": {},
    "source": [
     "# -----------------------------------\n",
@@ -127,8 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "optimum-thirty",
+   "execution_count": 6,
+   "id": "accurate-glance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,8 +128,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "honey-newspaper",
+   "execution_count": 7,
+   "id": "public-seeking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,8 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "supreme-heather",
+   "execution_count": 8,
+   "id": "blond-peace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,8 +197,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "executive-reader",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_images = data_info_df[:700]['path']\n",
+    "valid_images = data_info_df[700:]['path']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "enhanced-manual",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/train.txt','w') as train:\n",
+    "    for path in train_images:\n",
+    "        train.write(path)\n",
+    "        train.write('\\n')\n",
+    "\n",
+    "with open('../data/valid.txt','w') as val:\n",
+    "    for path in valid_images:\n",
+    "        val.write(path)\n",
+    "        val.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "recovered-scott",
+   "metadata": {},
+   "source": [
+    "# -----------------------------------\n",
+    "# Create TFRecord Files :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "desirable-healing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_tfrecord_outputs = '../tfrecord/train/'\n",
+    "valid_tfrecord_outputs = '../tfrecord/valid/'\n",
+    "data_dir = '../data/'\n",
+    "classes_dir = '../data/obj.names'\n",
+    "split = 'train'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "coated-death",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _bytes_feature(value : list):\n",
+    "    return Feature(bytes_list=BytesList(value=value))\n",
+    "def _int64_feature(value : list):\n",
+    "    return Feature(int64_list=Int64List(value=value))\n",
+    "def _float_feature(value : list):\n",
+    "    return Feature(float_list=FloatList(value=value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "narrow-mailman",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_example(annotations,class_map):\n",
+    "    image_path = os.path.join(data_dir,'Images',annotations['filename'])\n",
+    "    image_raw = open(image_path,'rb').read()\n",
+    "    key = hashlib.sha256(image_raw).hexdigest()\n",
+    "    width , height = int(annotations['size']['width']) , int(annotations['size']['height'])\n",
+    "    xmin , xmax , ymin , ymax , classes , classes_text , truncated , views , difficult_obj =\\\n",
+    "    [] , [] , [] , [] , [] , [] , [] , [] ,[]\n",
+    "    if 'object' in annotations:\n",
+    "        for obj in annotations['obj']:\n",
+    "            difficult = bool(int(obj['difficult']))\n",
+    "            difficult_obj.append(int(difficult))\n",
+    "            xmin.append(float(obj['bndbox']['xmin']) / width)\n",
+    "            ymin.append(float(obj['bndbox']['ymin']) / height)\n",
+    "            xmax.append(float(obj['bndbox']['xmax']) / width)\n",
+    "            ymax.append(float(obj['bndbox']['ymax']) / height)\n",
+    "            classes_text.append(obj['name'].encode('utf8'))\n",
+    "            classes.append(class_map[obj['name']])\n",
+    "            truncated.append(int(obj['truncated']))\n",
+    "            views.append(obj['pose'].encode('utf8'))\n",
+    "    example = Example(features=Features(feature={\n",
+    "        'image/height' : _int64_feature(value=[height]),\n",
+    "        'image/width' : _int64_feature(value=[width]),\n",
+    "        'image/filename' : _bytes_feature(value=[annotations['filename'].encode('utf8')]),\n",
+    "        'image/source_id' : _bytes_feature(value=[annotations['filename'].encode('utf8')]),\n",
+    "        'image/sha256' : _bytes_feature(value=[key.encode('utf8')]),\n",
+    "        'image/encoded' : _bytes_feature(value=[image_raw.encode('utf8')]),\n",
+    "        'image/format' : _bytes_feature(value=['jpg'.encode('utf8')]),\n",
+    "        'image/object/bbox/xmin' : _float_feature(value=xmin),\n",
+    "        'image/object/bbox/xmax' : _float_feature(value=xmax),\n",
+    "        'image/object/bbox/ymin' : _float_feature(value=ymin),\n",
+    "        'image/object/bbox/ymax' : _float_feature(value=ymax),\n",
+    "        'image/object/class/text' : _bytes_feature(value=classes_text),\n",
+    "        'image/object/class/label' : _int64_feature(value=classes),\n",
+    "        'image/object/difficult' : _int64_feature(value=difficult_obj),\n",
+    "        'image/object/truncated' : _int64_feature(value=truncated),\n",
+    "        'image/object/views' : _bytes_feature(value=views)\n",
+    "    }))\n",
+    "    return example"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "blank-aurora",
+   "id": "dental-impossible",
    "metadata": {},
    "outputs": [],
    "source": []
