Add create tfrecord function

--- a/DataManipulation/Pre-process Images.ipynb
+++ b/DataManipulation/Pre-process Images.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fiscal-future",
+   "id": "eligible-grain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "living-discrimination",
+   "id": "nasty-orientation",
    "metadata": {},
    "source": [
     "# -----------------------------------\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "skilled-panama",
+   "id": "stock-aquarium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "restricted-benchmark",
+   "id": "exact-soundtrack",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "special-foundation",
+   "id": "psychological-antarctica",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "answering-willow",
+   "id": "cathedral-hudson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "formed-venezuela",
+   "id": "available-think",
    "metadata": {},
    "source": [
     "# -----------------------------------\n",
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "accurate-glance",
+   "id": "adopted-cigarette",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "public-seeking",
+   "id": "buried-premises",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "blond-peace",
+   "id": "signed-spyware",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "executive-reader",
+   "id": "damaged-kitty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "enhanced-manual",
+   "id": "familiar-chance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recovered-scott",
+   "id": "classical-television",
    "metadata": {},
    "source": [
     "# -----------------------------------\n",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "desirable-healing",
+   "id": "abandoned-nylon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "coated-death",
+   "id": "empirical-special",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "narrow-mailman",
+   "id": "negative-answer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,8 +311,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "decimal-spokesman",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_xml(xml):\n",
+    "    if not len(xml):\n",
+    "        return {xml.tag : xml.text}\n",
+    "    result = {}\n",
+    "    for child in xml:\n",
+    "        child_result = parse_xml(child)\n",
+    "        if child.tag != 'object':\n",
+    "            result[child.tag] = child_result[child.tag]\n",
+    "        else :\n",
+    "            if child.tag not in result:\n",
+    "                result[child.tag] = []\n",
+    "            result[child.tag].append(child_result[child.tag])\n",
+    "    return {xml.tag : result}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "spatial-sauce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_tfrecord(data_dir,tfrecord_path,n_shards=10,\n",
+    "                    split=split,class_map_dir=classes_dir):\n",
+    "    paths = [\"{}.tfrecord-{}-of-{}\".format(split,idx + 1,n_shards) for idx in range(n_shards)]\n",
+    "    class_map = {name : idx for \n",
+    "                 idx , name in enumerate(open(classes_dir).read().splitlines())}\n",
+    "    logging.log(\"Class mapping loaded : %s\",class_map)\n",
+    "    image_list = open(os.path.join(data_dir,\"%.txt\" % split)).read().splitlines()\n",
+    "    logging.log(\"%d images loaded\",len(image_list))\n",
+    "    with ExitStack() as stack:\n",
+    "        writers = [stack.enter_context(tf.io.TFRecordWriter(path)) for path in paths]\n",
+    "        for index,img_name in enumerate(image_list):\n",
+    "            shard = index % n_shards\n",
+    "            annotaion_xml = os.path.join(data_dir,\"XML\",img_name + \".xml\")\n",
+    "            annotaion_xml = lxml.etree.fromstring(open(annotaion_xml).read())\n",
+    "            annotation = parse_xml(annotaion_xml)['annotation']\n",
+    "            tfrecord_example = create_example(annotation,class_map)\n",
+    "            writers[shard].write(tfrecord_example.SerializeToString())\n",
+    "    return paths"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dental-impossible",
+   "id": "viral-hygiene",
    "metadata": {},
    "outputs": [],
    "source": []
